added tropy tool to calculate entropy per blocksize on file. usefull for graphing. based on test.c

--- a/code/src/Makefile
+++ b/code/src/Makefile
@@ -5,10 +5,12 @@ LIBS=-ldisorder -lm
 OPTS=-Wall -g
 TESTOUT=../test/testexec
 TESTSRC=../test/test.c
-TOOLOUT=../tool/ropy
-TOOLSRC=../tool/ropy.c
+ROPYOUT=../tools/ropy
+ROPYSRC=../tools/ropy.c
+TROPYOUT=../tools/tropy
+TROPYSRC=../tools/tropy.c
 
-all:	disorder library test tool
+all:	disorder library test tools
 
 library: libdisorder.a
 
@@ -23,15 +25,21 @@ disorder: disorder.c ../include/disorder.h
 test:	../test/test.c
 	gcc $(OPTS) $(LDFLAGS) $(INCLUDES) -o $(TESTOUT) $(TESTSRC) $(LIBS)
 
-tool:	../tool/ropy.c
-	gcc $(OPTS) $(LDFLAGS) $(INCLUDES) -o $(TOOLOUT) $(TOOLSRC) $(LIBS)
+tools:	ropy tropy
+
+
+ropy:   ../tools/ropy.c
+	gcc $(OPTS) $(LDFLAGS) $(INCLUDES) -o $(ROPYOUT) $(ROPYSRC) $(LIBS)
+tropy:  ../tools/tropy.c
+	gcc $(OPTS) $(LDFLAGS) $(INCLUDES) -o $(TROPYOUT) $(TROPYSRC) $(LIBS)
 
 clean:
-	@/bin/rm -f *~ *.o *.a $(TESTOUT) $(TOOLOUT)
+	@/bin/rm -f *~ *.o *.a $(TESTOUT) $(ROPYOUT) $(TROPYOUT)
 	@/bin/rm -f ../test/*~
-	@/bin/rm -f ../tool/*~
+	@/bin/rm -f ../tools/*~
 	@/bin/rm -Rf ../test/testexec.dSYM/
-	@/bin/rm -Rf ../tool/ropy.dSYM/
+	@/bin/rm -Rf ../tools/ropy.dSYM/
+	@/bin/rm -Rf ../tools/tropy.dSYM/
 	@/bin/rm -f ../include/*~
 	@/bin/rm -f ../lib/*.a
 	@/bin/rm -f ../*~
