Make ropy an optional feature (enabled by default).
Allow user to specify '--disable-ropy' to prevent ropy
from compiling. This is for people who only want libdisorder.

Signed-off-by: Gokturk Yuksek <gokturk@binghamton.edu>

--- a/code/tool/Makefile.am
+++ b/code/tool/Makefile.am
@@ -1,4 +1,7 @@
-bin_PROGRAMS = ropy
+bin_PROGRAMS =
+if ENABLE_ROPY
+bin_PROGRAMS += ropy
 ropy_SOURCES = ropy.c
 ropy_LDADD   = ../src/libdisorder.la
 ropy_LDFLAGS = -lm
+endif
