--- a/code/configure.ac
+++ b/code/configure.ac
@@ -21,6 +21,12 @@ AC_CHECK_HEADERS([stdlib.h string.h math.h])
 # Checks for library functions.
 AC_CHECK_LIB([m], [log2], , [CPPFLAGS=" -D__FreeBSD__ "])
 
+# Optional features
+AC_ARG_ENABLE([ropy],
+	AS_HELP_STRING([--enable-ropy],
+			[Enable ropy tool [default=yes]]))
+AM_CONDITIONAL([ENABLE_ROPY], [test "x$enable_ropy" != "xno"])
+
 AC_CONFIG_FILES([Makefile
                  src/Makefile
                  tool/Makefile])
