Use autoconf to determine if log2() is available.
On some FreeBSD systems log2() is not defined in libm.
Instead of asking user to specifically pass '-DFreeBSD',
use autoconf to determine whether log2() is available.

Signed-off-by: Gokturk Yuksek <gokturk@binghamton.edu>

--- a/code/tool/Makefile.am
+++ b/code/tool/Makefile.am
@@ -2,6 +2,5 @@ bin_PROGRAMS =
 if ENABLE_ROPY
 bin_PROGRAMS += ropy
 ropy_SOURCES = ropy.c
-ropy_LDADD   = ../src/libdisorder.la
-ropy_LDFLAGS = -lm
+ropy_LDADD   = ../src/libdisorder.la @LIBS@
 endif
